# advent-of-code-2022

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  advent-of-code-2022.code-workspace
task_1/: CMakeLists.txt  main.cpp
task_1/data/: input.txt
task_2/: CMakeLists.txt  main.cpp
task_3/: CMakeLists.txt  main.cpp
task_4/: CMakeLists.txt  main.cpp
task_5/: CMakeLists.txt  main.cpp
task_6/: CMakeLists.txt  main.cpp
task_7/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  main.cpp
